[gd_scene load_steps=10 format=3 uid="uid://v5l1yekackxo"]

[ext_resource type="PackedScene" uid="uid://c1vjo05auqmej" path="res://Scenes/Object/bullet_base.tscn" id="1_pdf42"]
[ext_resource type="Texture2D" uid="uid://ropciere8u0l" path="res://assets/enemy/towerDefense_tile251.png" id="2_km7g4"]
[ext_resource type="Script" path="res://Scenes/Object/enemy_missile.gd" id="2_m5get"]
[ext_resource type="PackedScene" uid="uid://d2wvhn6pfhm6w" path="res://Scenes/Component/hurt_box_component.tscn" id="3_y7gmt"]
[ext_resource type="PackedScene" uid="uid://cn38yaihoeao" path="res://Scenes/Component/detect_component.tscn" id="5_k67gv"]
[ext_resource type="PackedScene" uid="uid://8pwhobx1swnv" path="res://Scenes/Component/health_component.tscn" id="6_4028t"]

[sub_resource type="Gradient" id="Gradient_02xdd"]
offsets = PackedFloat32Array(0, 0.772727, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 0.498833, 0.03, 1, 1, 0.9775, 0.55, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tmn6p"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cy5gl"]
radius = 100.0

[node name="EnemyMissile" groups=["EnemyMissile"] instance=ExtResource("1_pdf42")]
script = ExtResource("2_m5get")
speed = 300.0

[node name="Sprite2D" parent="." index="0"]
rotation = 0.0
texture = ExtResource("2_km7g4")

[node name="HitBoxComponent" parent="." index="2"]
collision_layer = 4
collision_mask = 2

[node name="Node2D" parent="." index="3"]
position = Vector2(-15, 0)

[node name="BulletTrail" parent="Node2D" index="0"]
gradient = SubResource("Gradient_02xdd")
length = 15

[node name="HurtBoxComponent" parent="." index="4" instance=ExtResource("3_y7gmt")]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tmn6p")

[node name="DetectComponent" parent="." index="5" instance=ExtResource("5_k67gv")]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectComponent" index="0"]
shape = SubResource("CircleShape2D_cy5gl")

[node name="HealthComponent" parent="." index="6" instance=ExtResource("6_4028t")]
max_health = 1.0
